TAG: homologyload-tr11750-MP
DATE: 07/01/2015
STAFF: lec
CHANGES: merge  point tag for TR11750 Infrastructure II

TAG: homologyload-tr11750-1
DATE: 04/28/2015
STAFF: sc
CHANGES: copied *.postgres to *, rm *.postgres
specifically:
cp homologeneload.py.postgres homologeneload.py
cp homologyload.py.postgres homologyload.py
cp homologyload.sh.postgres homologyload.sh
cp preprocessHomologene.py.postgres preprocessHomologene.py
rm homologeneload.py.postgres homologyload.py.postgres homologyload.sh.postgres preprocessHomologene.py.postgres

TAG: homologyload-tr11750-BP
DATE: 04/28/2015
STAFF: sc
CHANGES: Branch point tag for TR11750 Infrastructure II

TAG: homologyload-5-2-2-1
DATE: 04/24/2015
STAFF: sc
CHANGES: TR11886 - merge to trunk

TAG: homologyload-tr11886-26
DATE:04/14/2015
STAFF: sc
CHANGES: US107 - test homologyload against postgres/new linux
* added postgres versions of four scripts

TAG: homologyload-tr11886-25
DATE:04/14/2015
STAFF: sc
CHANGES:
1) homologyload.py - sybase/pg testing revealed leading space in MRK_ClusterMember.bcp
   when > 1 member. No effect in db, however DID affect the file diffs

TAG: homologyload-tr11886-24
DATE:03/12/2015
STAFF: sc
CHANGES:US101 finalize
1) exit 0 at end of Install script
2) removed these scripts: preprocessHomologene.sh preprocessHGNC.sh preprocessHybrid.sh
3) made preprocess scripts consistent; all python script comments consistent

TAG: homologyload-tr11886-23
DATE:03/10/2015
STAFF: sc
CHANGES: Replace all echo '\n' with echo "" for linux in all *.sh

TAG: homologyload-tr11886-22
DATE:03/09/2015
STAFF: sc
CHANGES: TR11888 - 
1) US126 - change secondary source hgnc and hg text to hg and hgnc 
    (reverse order)
2) US101 - add postgres/sybase flipping code to all python scripts - tested for sybase only, US101 pulled from sprint 4 because of dependencies.

TAG: homologyload-tr11886-21
DATE:03/04/2015
STAFF: sc
CHANGES: TR11888 - Added:
1) preprocessXenbase.py
2) preprocessXenbase.sh
3) xenbaseload.config
