@@ -51,9 +51,6 @@ import symbolsort
 import time
 import db
 
-db.setAutoTranslate()
-db.setAutoTranslateBE()
-
 ###--- globals ---###
 
 TAB = '\t'
@@ -168,15 +165,15 @@ def deleteHomologies():
     # Throws:  db.error, db.connection_exc
 
     db.sql('''select _Cluster_key
-    into #todelete2
+    into temp todelete2
     from MRK_Cluster
     where _CreatedBy_key = %s''' % createdByKey, None)
 
-    db.sql('create index todelete2_idx1 on #todelete2(_Cluster_key)', None)
+    db.sql('create index todelete2_idx1 on todelete2(_Cluster_key)', None)
    
     print 'Deleting Homology Clusters and Members; any Properties and Accessions'
     db.sql('''delete from MRK_Cluster m
-        using #todelete2 d
+        using todelete2 d
         where d._Cluster_key = m._Cluster_key''', None)
 
     db.commit()
