@@ -61,9 +61,6 @@ import mgi_utils
 import clusterize
 import db
 
-db.setAutoTranslate()
-db.setAutoTranslateBE()
-
 ###--- globals ---###
 
 # constants
