@@ -1,3 +1,13 @@
+TAG: homologyload-trunk-1
+DATE: 07/16/2015
+STAFF: sc
+CHANGES:
+1) rm db.setAutoTranslate() and db.setAutoTranslateBE() from all python scripts
+2) # --> temp:
+    homologeneload.py
+    homologyload.py
+    preprocessHomologene.py
+    
 TAG: homologyload-tr11750-MP
 DATE: 07/01/2015
 STAFF: lec
